// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Item should be defined 1`] = `
.c0 {
  cursor: pointer;
  text-align: center;
  color: #E7E7E7;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 250ms;
  transition: color 250ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-touch-callout: none;
}

.c0 svg {
  max-width: 8px;
}

<a
<<<<<<< HEAD
  className="anchor-menu-item c0"
=======
  className="anchor-menu-item sc-cpmLhU jyvUSM"
>>>>>>> chore(Button): update snapshots due to modifying theme file
/>
`;

exports[`Component: Item should render with label 1`] = `
.c0 {
  cursor: pointer;
  text-align: center;
  color: #E7E7E7;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 250ms;
  transition: color 250ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-touch-callout: none;
}

.c0 svg {
  max-width: 8px;
}

<a
<<<<<<< HEAD
  className="anchor-menu-item c0"
=======
  className="anchor-menu-item sc-cpmLhU jyvUSM"
>>>>>>> chore(Button): update snapshots due to modifying theme file
>
  label
</a>
`;
